--- a/.env
+++ b/.env
@@ -1,3 +1,17 @@
-DISCORD_TOKEN=
-ALLOWED_USER_ID=562007602163351603
-CLIENT_ID=
+#      /====sekcja dla dodatku muz-gui====\ 
+#    (https://github.com/grw4270/muz-gui.git)
+# 
+# Muz GUI - interfejs webowy do zarządzania botem muz 
+# 
+# CLIENT_ID=
+# CLIENT_SECRET=
+# CALLBACK_URL=https://bot.xxx.xx/auth/callback
+# SESSION_SECRET=dev_session_secret_change_me
+# BASE_MUSIC_DIR=/app/music
+# PORT=3000
+# 
+#      \==================================/
+
+
+BOT_TOKEN=
+OWNER_ID=
